* alloc.c: Simplify handling of large-request failures (Bug#8800).

(SPARE_MEMORY): Always define.
(LARGE_REQUEST): Remove.
(memory_full): Use SPARE_MEMORY rather than LARGE_REQUEST.